fixed not showing nba picks

--- a/client/src/css/masters.css
+++ b/client/src/css/masters.css
@@ -71,3 +71,8 @@
 .og {
     margin: 5% !important;
 }
+
+.important {
+    color: gold;
+    font-weight: bolder;
+}
